# video-alignment-tool

./: .gitignore  TestVAT.ipynb  VATFunctions.py  VATMainForm.py  VideoTest.py  demo.ipynb  gui.py  gui_edited.py  pyproject.toml  qt_demo.py  warp_video.py  warp_video.spec
video_alignment_tool/: gui-old.py  gui.py  webview.py
