[project]
name = "video-alignment-tool"
version = "0.0.1"
authors = [
  { name="Andre Telfer", email="andretelfer@gmail.com" },
]
description = "Correct perspective differences in behavioral videos"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.22",
    "PyQt6",
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/biocoders/video-alignment-tool"
"Bug Tracker" = "https://github.com/biocoders/video-alignment-tool/issues"
